Issue #14662: Prevent shutil failures on OS X when destination does not support chflag operations.  (Patch by Hynek Schlawack)